update to latest versions. fixes tests order